* Minor update: (201104)
- downgrade logged warning when sorting QPKG order,
- include 'start' and 'stop' operations in logs.

* Minor update: (201101)
- improve log format.

* Minor update: (201029)
- add support for SysV-style init scripts.

* Minor update: (190106)
- tidy-up a few logged and interactive display messages.

* Initial release: (190101)
- first public script release.