@@ -2,4 +2,4 @@
 
 echo -n "checking ... "
 
-shellcheck --shell=bash --exclude=1003,1090,1117,2016,2021,2086,2155,2181,2206,2207 ./shared/runlast.sh && echo 'passed!' || echo 'failed!'
+shellcheck --shell=bash --exclude=1003,1090,1117,2012,2016,2021,2086,2155,2181,2206,2207 ./shared/runlast.sh && echo 'passed!' || echo 'failed!'
